# index_type

./: AGENTS.md  Cargo.toml  README.md  test_prelude.rs
examples/: basic.rs
index_type_macros/: Cargo.toml
index_type_macros/src/: lib.rs
src/: base_index_types.rs  custom_index_types.rs  error.rs  index_scalar_types.rs  lib.rs  macros.rs  typed_array.rs  typed_array_vec.rs  typed_enumerate.rs  typed_iter_enumerate.rs  typed_range.rs  typed_range_iter.rs  typed_slice.rs  typed_vec.rs  utils.rs
src/typed_slice/: index.rs  mod.rs
tests/: index_types.rs  integration_tests.rs  typed_array.rs  typed_array_vec.rs  typed_enumerate.rs  typed_range.rs  typed_range_iter.rs  typed_slice.rs  typed_vec.rs  ui.rs
tests/ui/: derive_index_too_big_error_invalid_msg.rs  derive_index_too_big_error_invalid_msg.stderr  derive_index_too_big_error_missing_msg.rs  derive_index_too_big_error_missing_msg.stderr  derive_index_too_big_error_non_empty.rs  derive_index_too_big_error_non_empty.stderr  derive_index_type_invalid_error_attr.rs  derive_index_type_invalid_error_attr.stderr
