[package]
name = "index_type_macros"
version = "0.1.0"
edition = "2024"
description = "Derive macros for index_type crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roeeshoshani/index_type"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
